<resources>
    <string name="app_name">Grupo1_TP4</string>
    <string name="altaProducto">Alta</string>
    <string name="modificarProducto">Modificación</string>
    <string name="listarProductos">Listado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- fragment Alta -->
    <string name="altaID"> ID</string>
    <string name="altaNombreProducto"> NOMBRE PRODUCTO</string>
    <string name="altaSTOCK"> STOCK</string>
    <string name="altaCategoria">CATEGORIA</string>
    <string name="altaBtnAgregar">AGREGAR</string>

</resources>
